add hero section with background video

--- a/index.html
+++ b/index.html
@@ -7,10 +7,60 @@
     <title>Hike | Discover The New</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="icon" href="./img/logo.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
+    <!-- Announcement Section -->
     <p class="announcment_bar">
       GET FREE SHIPPING ON ALL ORDERS VALUE ABOVE RS 1499/-
     </p>
+    <!-- Navbar -->
+    <div class="navbar">
+      <div class="container">
+        <div class="header-top">
+          <div class="searach-icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+
+          <div class="brand-image">
+            <img src="./img/branding.png" />
+          </div>
+          <div class="options">
+            <a href=""><i class="fa-regular fa-user"></i></a>
+            <a href=""><i class="fa-solid fa-bag-shopping"></i></a>
+          </div>
+        </div>
+        <div>
+          <ul>
+            <li class="nav-link"><a href="">Winter </a></li>
+            <li class="nav-link"><a href="">New release</a></li>
+            <li class="nav-link"><a href="">Active wear</a></li>
+            <li class="nav-link"><a href="">Tracks </a></li>
+            <li class="nav-link"><a href="">Waffle</a></li>
+            <li class="nav-link"><a href="">Hoodies</a></li>
+            <li class="nav-link"><a href="">Cross body bag</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="show-case">
+      <video
+        src="./videos/show-case-video.mp4"
+        autoplay="true"
+        loop
+        muted
+      ></video>
+      <div class="text">
+        <h1>Outerwear Collection</h1>
+        <p>A Game-Changing Outfit Engineered For Comfort & Style</p>
+      </div>
+    </div>
   </body>
 </html>
