--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       </div>
     </div>
 
+    <!-- Showcase section -->
     <div class="show-case">
       <video
         src="./videos/show-case-video.mp4"
@@ -60,6 +61,16 @@
       <div class="text">
         <h1>Outerwear Collection</h1>
         <p>A Game-Changing Outfit Engineered For Comfort & Style</p>
+      </div>
+    </div>
+
+    <!-- Quote Section -->
+    <div class="container">
+      <div class="quote-section">
+        <p>
+          "Their ability to deliver technical yet fashionable has heightened the
+          standard of everyday attire"
+        </p>
       </div>
     </div>
   </body>
