--- a/index.html
+++ b/index.html
@@ -72,6 +72,30 @@
           standard of everyday attire"
         </p>
       </div>
+      <div class="row">
+      <div class="hero-card">
+        <img src="./img/new-releases.webp" alt="" />
+        <a href="#" class="link">New releases</a>
+      </div>
+      <div class="hero-card">
+        <img src="./img/active-wear.webp" alt="" />
+        <a href="#" class="link">Active Wear</a>
+      </div>
+      </div>
+      <div class="title">Trending Now</div>
+       <div class="row trending">
+        
+      <div class="hero-card">
+        <img src="./img/hoodies.webp" alt="" />
+        <a href="#" class="link">Hoodies</a>
+      </div>
+      <div class="hero-card">
+        <img src="./img/waffle-neck.webp" alt="" />
+        <a href="#" class="link">Waffle Neck</a>
+      </div>
+      </div>
+    </div>
+
     </div>
   </body>
 </html>
