--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
         <img src="./img/waffle-neck.webp" alt="" />
         <a href="#" class="link">Waffle Neck</a>
       </div>
+    
+      </div><div class="row trending">
+          <div class="hero-card">
+        <img src="./img/tracks.webp" alt="" />
+        <a href="#" class="link">Tracks</a>
+      </div>
+      <div class="hero-card">
+        <img src="./img/cross-body.webp" alt="" />
+        <a href="#" class="link">Cross body bag</a>
+      </div>
       </div>
     </div>
 
